--- a/abm.css
+++ b/abm.css
@@ -5,7 +5,9 @@ header h1 {
     margin: 0;
     padding: 0;
 }
-body {max-width: 85rem; margin: auto;}
+body {
+    font-family: sans-serif;
+    max-width: 85rem; margin: auto;}
 body:after {
     content: "";
     display: block;
@@ -74,31 +76,30 @@ a#headerwrap:hover {text-decoration: none;}
 
 #footer h4 {margin-top: 0;}
 
-p {line-height: 1.75rem; margin-top: .25rem;}
+p {line-height: 1.25rem; margin-top: .25rem;}
 
 p+p {margin-top: 1rem;}
 
-main {margin-left: 1rem; margin-right: 1rem; line-height: 1.75rem;}
+main {margin-left: 1rem; margin-right: 1rem; line-height: 1.25rem;}
 
 main h1 {margin-top: 2em;}
 
-h1 { font-size: 1.5em;
+h1 { font-size: 2em;
 font-family: sans-serif;}
 
 h2 {
-    font-size: 1.25em;
-    margin-bottom: .25rem;
-    margin-top: 1.5rem;
+    font-size: 1.75em;
+    margin-bottom: .25em;
+    margin-top: 1.25em;
     font-family: sans-serif;
-    color: #555;
 }
 
 h1 + h2 {margin-top: .5em;}
 
 h3 {
-    font-size: 1em;
+    font-size: 1.45em;
     font-weight: bold;
-    font-family: serif;
+    font-family: sans-serif;
     margin-bottom: .25rem;
     margin-top: .5rem;
 }
@@ -114,6 +115,8 @@ body > * {
 }
 
 #booklistTBL a:link {display: block;}
+
+#booklistTBL tr {line-height: 1.5em;}
 
 a:link {color: blue;}
 a:visited {color: purple;}
@@ -140,45 +143,56 @@ a:active {text-decoration: underline;}
 #booklist table {
     margin: auto;
 }
+
+#booklistTBL td.price::after {
+    content: ",-";
+}
 #books {
     margin: 0;
 }
 
-#booklist tr:hover td, #booklist th:hover {
+#booklist tr:hover td {
     border-color: gray;
 }
+
 #booklist th {
+    border-color: #666;
+}
+
+#booklist th:hover, #booklist th:focus {
+    border-color: black;
+    background-color: #dfdbbc;
+    cursor: ns-resize;
+    box-shadow: 0 0 0.25em black;
+}
+th.header {
     background-image: url(img/sort_unsorted.svg);
+    background-color: #c0bc99;
     background-position: right .25rem center;
-    background-size: 1em 1em;
+    background-size: 1.25em 1.25em;
     background-repeat: no-repeat;
     text-align: left;
     padding: .5rem;
     border: 1px solid #ccc;
     position: relative;
 }
-#booklist #booklistTBL th:hover {
-    text-decoration: underline;
-    background-image: url(img/sort_transp_asc.svg);
-    cursor: ns-resize;
-    box-shadow: 0 0 5px #747474;
-}
 
-#booklist #booklistTBL thead[data-order="1"] th#booklist-titles:hover,
-#booklist #booklistTBL thead[data-order="2"] th#booklist-authors:hover,
-#booklist #booklistTBL thead[data-order="3"] th#booklist-prices:hover{
-    background-image: url(img/sort_transp_asc.svg);
+th.headerSortUp{
+    
+    background-color: #c0bc99;;
+    background-image: url(img/sort_asc.svg);
 }
 
 
-#booklist #booklistTBL thead[data-order="-1"] th#booklist-titles:hover,
-#booklist #booklistTBL thead[data-order="-2"] th#booklist-authors:hover,
-#booklist #booklistTBL thead[data-order="-3"] th#booklist-prices:hover{
-    background-image: url(img/sort_transp_desc.svg);
+th.headerSortDown{
+    
+    background-color: #c0bc99;;
+    background-image: url(img/sort_desc.svg);
 }
+
 
 #booklist tbody tr:hover td {
-    background-color: #ffffe6;
+    background-color: #ffff8f;
 } 
 #booklist td {
     border: 1px solid #ccc;
@@ -191,7 +205,7 @@ a:active {text-decoration: underline;}
     content: "";
     float: left;
     overflow: hidden;
-    min-height: 4em;
+    min-height: 2em;
 }
 #booklist thead tr:before {
     content: "";
@@ -208,7 +222,7 @@ a:active {text-decoration: underline;}
     margin-top: 0.25rem;
     font-size: 1.4rem;
     font-family: sans-serif;
-    line-height: 1.75rem;
+    line-height: 1.25em;
 }
 
 h2.booktitle {
@@ -217,27 +231,15 @@ h2.booktitle {
     line-height: 1.25em;
 }
 
-h3.authors {font-style: italic;}
+h3.authors {
+    font-size: 1.5em;
+    font-style: italic;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
 
 #booklist td.price {
     text-align: right;
-}
-
-/* Style table header cells depending on if they are sorted descending or ascending */
-thead[data-order="-1"] th#booklist-titles, 
-thead[data-order="-2"] th#booklist-authors, 
-thead[data-order="-3"] th#booklist-prices {
-    background-color: #c0bc99;
-    border-color: gray;
-    background-image: url(img/sort_desc.svg);
-}
-
-thead[data-order="1"] th#booklist-titles, 
-thead[data-order="2"] th#booklist-authors, 
-thead[data-order="3"] th#booklist-prices {
-    background-color: #c0bc99; 
-    border-color: gray;
-    background-image: url(img/sort_asc.svg);
 }
 
 /* bookmeta styling */
@@ -255,17 +257,19 @@ ul.bookmeta {
     line-height: 1.75rem;
 }
 
-#books .bookmeta .price:before {
-    content: "Pris: ";
+#books .bookmeta .price:after {
+    content: ",-";
 }
 
 #books .bookmeta li+li {margin-top: .5rem;}
 
 #books .bookmeta .authors {
-    font-size: 1.5rem;
-    font-family: garamond, serif;
     font-weight: bold;
+
 }
+a.tilbake {margin-top: 3em; line-height: 2em;}
+
+li.authors {margin-top: 0.5em; font-size: 1.25em;}
 #company {
     background-color: #c0bc99;
     background-image: url(img/abm-media-logo200x200.png);
@@ -286,7 +290,7 @@ ul.bookmeta {
 body .utgivelse {
     background-color: #eee;
     padding-top: 1em;
-    border-radius: .5em;
+    border-radius: .25em;
     border: 1px solid #aaa;
     position: relative;
     padding-left: 12rem;
